--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 				</div>
 			</div>
 			<div class="fb-comments" data-href="https://anja46.github.io/zavrsniprojekt/my_works.html" data-numposts="20"></div>
+			<div class="fb-like" data-href="https://anja46.github.io/zavrsniprojekt/my_works.html" data-layout="button" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 			<div class="row footer">
 				<img src="img/footer_title.png">
 				<div class="col-xs-12">
