--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,9 @@
 			<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 	</head>
-	<body>		
+	<body>
+	<div class="container">
+		
 			<div class="row">
 				<ul class="main-menu">
 					<li><a href="index.html">Home</a></li>
