--- a/my_works.html
+++ b/my_works.html
@@ -198,5 +198,6 @@
 				]
 			});			
 		</script>
+	<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a69c0e15cb185f6"></script>
 	</body>
 </html>
