--- a/my_works.html
+++ b/my_works.html
@@ -169,7 +169,7 @@
 				</div>
 			</div>	
 		
-		<div class="fb-comments" data-href="https://anja46.github.io/zavrsniprojekt/my_works.html" data-numposts="20"></div>
+		<div class="fb-comments" margin-left: 80px; data-href="https://anja46.github.io/zavrsniprojekt/my_works.html" data-numposts="20"></div>
 		<div class="fb-like" data-href="https://anja46.github.io/zavrsniprojekt/my_works.html" data-layout="standard" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 		
 			<div class="row footer">
