--- a/my_works.html
+++ b/my_works.html
@@ -120,7 +120,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/sve.jpg">
+						<img src="img/Sve.jpg">
 						<div class="overlay">
 							<p><a href="img/sve.jpg" data-lightbox="g1">Opis slike</a></p>
 						</div>
