--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
-						<img src="img/positive.gif">
+						<img src="img/Positive.gif">
 						<div class="overlay">
 							<p><a href="positive.gif" data-lightbox="g1">Positive and Negative </a></p>
 						</div>
