--- a/my_works.html
+++ b/my_works.html
@@ -53,13 +53,13 @@
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner" role="listbox">
 								<div class="item active">
-									<img src="img/prva slika.jpg" alt="Prva slika">
+									<img src="img/Prva slika.jpg" alt="Prva slika">
 									<div class="carousel-caption">
 										Opis prve slike
 									</div>
 								</div>
 								<div class="item">
-									<img src="img/druga slika.jpg" alt="Druga slika">
+									<img src="img/Druga slika.jpg" alt="Druga slika">
 									<div class="carousel-caption">
 										Opis druge slike
 									</div>
