--- a/about_me.html
+++ b/about_me.html
@@ -30,7 +30,7 @@
 				<h1>My story</h1>
 				<div class="row about-me">
 					<div class="col-xs-12 col-sm-6">
-						<img src="img/ja.jpg">
+						<img src="img/ja.JPG">
 					</div>
 					<div class="col-xs-12 col-sm-6 about-me-text">						
 						<p></p>
