--- a/about_me.html
+++ b/about_me.html
@@ -34,7 +34,7 @@
 					</div>
 					<div class="col-xs-12 col-sm-6 about-me-text">						
 						<p></p>
-						<p>I'm a hardworking Graphic Design student of University North in Varaždin. I love making various projects, especially animation that makes people  smile. I am truly passionate at what I'm doing and I can offer my liability and ability to adapt at any circumstances or any project future clients need. Looking forward to learn new things and expand my experience.</p>
+						<p>I'm hardworking Graphic Design student of University North in Varaždin. I love making various projects, especially animation that makes people  smile. I am truly passionate at what I'm doing and I can offer my liability and ability to adapt at any circumstances or any project future clients need. Looking forward to learn new things and expand my experience.</p>
 					</div>
 				</div>
 			</div>			
