--- a/my_works.html
+++ b/my_works.html
@@ -104,37 +104,37 @@
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/Cactus 1.jpg">
 						<div class="overlay">
-							<p><a href="img/Cactus 1.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/Cactus 1.jpg" data-lightbox="g1">Buzz Squad</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/Cactus 2.jpg">
 						<div class="overlay">
-							<p><a href="img/Cactus 2.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/Cactus 2.jpg" data-lightbox="g1">Pearl Squad</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/Cactus 3.jpg">
 						<div class="overlay">
-							<p><a href="img/Cactus 3.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/Cactus 3.jpg" data-lightbox="g1">Softy Squad</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/Sve.jpg">
 						<div class="overlay">
-							<p><a href="img/sve.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/sve.jpg" data-lightbox="g1">Cactus</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/aloe vera.jpg">
 						<div class="overlay">
-							<p><a href="img/aloe vera.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/aloe vera.jpg" data-lightbox="g1">MoDu cream</a></p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-6 image-container">
 						<img src="img/Brošura.jpg">
 						<div class="overlay">
-							<p><a href="img/Brošura.jpg" data-lightbox="g1">Opis slike</a></p>
+							<p><a href="img/Brošura.jpg" data-lightbox="g1">MoDu brochure</a></p>
 						</div>
 					</div>
 				</div>
