--- a/index.html
+++ b/index.html
@@ -90,10 +90,7 @@
 			<div class="row footer">
 				<div class="col-xs-10">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about_me.html">About me</a></li>
-						<li><a href="my_works.html">My works</a></li>
-						<li><a href="contact.html">Contact</a></li>
+						<li><a href="#mainMenu">To the top button</a>
 					</ul>
 				</div>
 			</div>			
