--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<div class="row footer">
 				<div class="col-xs-10">
 					<ul>
-						<li><a href="#mainMenu">To the top button</a>
+						<li><a href="#mainMenu">TO THE TOP BUTTON</a>
 					</ul>
 				</div>
 			</div>			
