--- a/about_me.html
+++ b/about_me.html
@@ -87,12 +87,9 @@
 				</form>
 			</div>			
 			<div class="row footer">
-				<div class="col-xs-10">
+				<div class="col-xs-8">
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about_me.html">About me</a></li>
-						<li><a href="my_works.html">My works</a></li>
-						<li><a href="contact.html">Contact</a></li>
+					<li><a href="#mainMenu">TO THE TOP BUTTON</a>
 					</ul>
 				</div>
 			</div>			
