--- a/about_me.html
+++ b/about_me.html
@@ -19,7 +19,7 @@
 		<div class="container">
 			
 			<div class="row">
-				<ul class="main-menu">
+				<ul class="main-menu" id="mainMenu">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="about_me.html">About me</a></li>
 					<li><a href="my_works.html">My works</a></li>
